# Nexus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  loom.yml  miri.yml
bench-out-sub/: raw_runs.json  summary.json
configs/: dev.toml
docs/: evaluation.md  positioning.md  results.md  storage-format.md
scripts/: bench-official-medium.ps1  bench-official-medium.sh  bench-official-small.ps1  bench-official-small.sh  bench-official-subprocess.ps1  bench-official-subprocess.sh  run_integration.sh  run_unit.sh
src/: checksum.rs  codec.rs  config.rs  error.rs  fault.rs  ids.rs  lib.rs  main.rs  types.rs
src/benchmark/: harness.rs  metrics.rs  mod.rs  multirun.rs  report.rs  stats.rs
src/compaction/: compactor.rs  install.rs  mod.rs  relocation.rs  rewrite_policy.rs  safety.rs
src/engine/: api.rs  fault.rs  mod.rs
src/graph/: coaccess.rs  decay.rs  mod.rs  scoring.rs  snapshot.rs
src/index/: lookup.rs  mod.rs  primary.rs  remap.rs
src/planner/: affinity.rs  entry.rs  grouping.rs  mod.rs  plan.rs  thresholds.rs
src/recovery/: mod.rs
src/scheduler/: background.rs  budget.rs  mod.rs  triggers.rs
src/stats/: counters.rs  histograms.rs  mod.rs  report.rs
src/storage/: block.rs  gc.rs  manifest.rs  mod.rs  record.rs  segment.rs  segment_index.rs  (+2 more)
tests/: final_e2e.rs  phase10_range_reads.rs  phase11_multirun_benchmark.rs  phase12_loom_counters.rs  phase1_storage.rs  phase2_index_reads.rs  phase3_tracking_graph.rs  phase4_planner.rs  phase5_compaction.rs  phase6_scheduler.rs  phase7_recovery.rs  phase8_benchmark.rs  phase9_locality.rs
(+13 files in other folders)
